# DeskGraph

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  prettier.config.mjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: demo.rs  main.rs
apps/cli/tests/: health_cli.rs
apps/desktop/: AGENTS.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  action.test.ts  action.ts  cleanup.test.ts  cleanup.ts  extraction.test.ts  extraction.ts  health.test.ts  health.ts  i18n.test.ts  i18n.ts  main.tsx  manifest.test.ts  manifest.ts  projects.test.ts  projects.ts  search.test.ts  search.ts  watch.test.ts  watch.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  scope_access.rs
apps/desktop/src/localization/: catalog.ts  en.ts  ja.ts  zhCN.ts  zhTW.ts
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
apps/mcp/tests/: mcp_stdio.rs
benchmarks/: README.md
benchmarks/ocr/: corpus-v1.example.json  run-v1.example.json
benchmarks/results/: search-10k-folder-macos-arm64-2026-07-22.json  search-10k-macos-arm64-2026-07-16.json
crates/database/: Cargo.toml
crates/database/src/: fence_windows.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: action.rs  extraction.rs  health.rs  lib.rs  manifest.rs  project.rs  search.rs  watch.rs
crates/extractors/: AGENTS.md  Cargo.toml
crates/extractors/src/: image.rs  lib.rs  ocr.rs  ooxml.rs  pdf.rs  service.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/projects/: Cargo.toml
crates/projects/src/: lib.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: lib.rs
crates/scanner/: AGENTS.md  Cargo.toml
crates/scanner/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/transactions/: AGENTS.md  Cargo.toml
crates/transactions/src/: lib.rs  platform_rename.rs
crates/transactions/tests/: production_gate.rs
crates/watcher/: AGENTS.md  Cargo.toml
crates/watcher/src/: lib.rs  native.rs
docs/: BUILD_WEEK_DEMO_SCRIPT.md  HACKATHON_SUBMISSION.md  MCP.md
docs/architecture/: README.md
docs/architecture/adr/: 0000-template.md  0008-project-license.md  0009-health-contract.md  0010-manifest-store-and-file-identity.md  0011-resumable-scan-jobs.md  0012-bounded-extraction-provider-contract.md  0013-bounded-pdf-text-and-structural-provenance.md  0014-allowlisted-ooxml-parts-proposal.md  0015-sqlite-fts5-lexical-baseline.md  0016-durable-watch-hints-and-reconciliation.md  0017-immutable-rename-preview-and-journal.md  0018-derived-folder-profiles-and-project-suggestions.md  0019-append-only-project-candidates-and-user-feedback.md  0020-bounded-exact-duplicate-candidates.md  0021-append-only-file-relation-feedback.md  0022-explicit-numeric-file-version-candidates.md  0023-version-feedback-is-bound-to-directional-evidence.md  0024-native-first-ocr-provider-stack.md  0025-journaled-direct-rename-execution-and-undo.md  0026-general-unix-file-actions-remain-preview-only.md  0027-packaged-runtime-identity-precedes-action-fence.md  0028-explainable-screenshot-review-groups.md  0029-smart-cleanup-inbox-derived-read-model.md  0030-cleanup-action-plan-preview-is-independent.md  0031-cleanup-preview-detail-is-explicit-and-transient.md  0032-project-discovery-is-manifest-only-and-path-progressive.md  0033-authorization-is-an-explicit-coverage-set-minus-exclusions.md
docs/benchmarks/: M1_10K_MANIFEST_SCAN.md
docs/marketing/: LAUNCH_COPY_TEMPLATES.md
docs/planning/: 00_START_HERE.md  01_PRODUCT_DEFINITION.md  02_ARCHITECTURE.md  03_PLAN_VARIANTS.md  04_MILESTONES.md  05_TEST_SECURITY_BENCHMARK.md  06_RELEASE_DISTRIBUTION.md  07_LAUNCH_MARKETING_PLAN.md  08_POST_LAUNCH_OPERATIONS.md  09_DECISIONS_ADR.md  10_ISSUE_BACKLOG.md  DECISIONS_NEEDED.md  DEPENDENCY_AUDIT.md  EXTERNAL_ACTIONS_REQUIRED.md  IMPLEMENTATION_STATUS.md  MANIFEST.json  RELEASE_READINESS.md  REPOSITORY_ASSESSMENT.md  RISK_REGISTER.md  TASK_GRAPH.md
migrations/: 0001_manifest.sql  0002_resumable_scan_jobs.sql  0003_content_extraction.sql  0004_content_chunk_provenance.sql  0005_lexical_search.sql  0006_watch_reconciliation.sql  0007_action_plan_preview.sql  0008_project_candidates.sql  0009_exact_duplicate_candidates.sql  0010_file_relation_feedback.sql  0011_file_version_candidates.sql  0012_file_version_feedback.sql  0013_ooxml_chunk_provenance.sql  0014_image_metadata.sql  0015_ocr_jobs_and_provenance.sql  0016_nullable_ocr_confidence.sql  0017_watch_active_deadline_index.sql  0018_watch_reconciliation_kind.sql  0019_action_transaction_journal.sql  0020_scope_access_grants.sql  0021_screenshot_group_candidates.sql  0022_cleanup_action_plan_preview.sql  0023_coverage_root_overlap_guard.sql  0024_scope_exclusions_and_privacy_purge.sql  0025_scope_root_revocation.sql  0026_scope_root_revocation_hardening.sql  0027_folder_search_descendant_index.sql
prompts/: 01_FOUNDATION.md  02_MANIFEST_GRAPH.md  03_EXTRACTORS_OCR.md  04_HYBRID_SEARCH.md  05_PROJECT_GRAPH.md  06_SAFE_ORGANIZER.md  07_WATCH_SMART_INBOX.md  08_DESKTOP_UX.md  09_LOCAL_AI.md  10_MCP.md  11_BENCHMARK_SECURITY.md  12_PACKAGING.md  13_DOCS_DEMO.md  14_RELEASE.md  15_LAUNCH_MARKETING.md
tools/ocr-evaluator/: Cargo.toml
tools/ocr-evaluator/src/: lib.rs  main.rs  protocol.rs  runner.rs
tools/search-benchmark/: Cargo.toml
tools/search-benchmark/src/: main.rs
