[workspace]
members = [
  "apps/cli",
  "apps/desktop/src-tauri",
  "crates/database",
  "crates/domain",
  "crates/extractors",
  "crates/identity",
  "crates/projects",
  "crates/retrieval",
  "crates/scanner",
  "crates/telemetry",
  "crates/transactions",
  "crates/watcher",
  "tools/search-benchmark",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4.6.2", features = ["derive"] }
imagesize = { version = "=0.15.0", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
lopdf = { version = "=0.44.0", default-features = false }
quick-xml = { version = "=0.41.0", default-features = false }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-build = "2"
tempfile = "3.27.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
unicode-normalization = "0.1.25"
zip = { version = "=8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[workspace.dependencies.windows-sys]
version = "0.61.2"
features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
