[workspace]
members = [
  "apps/cli",
  "apps/desktop/src-tauri",
  "crates/database",
  "crates/domain",
  "crates/extractors",
  "crates/identity",
  "crates/projects",
  "crates/retrieval",
  "crates/scanner",
  "crates/telemetry",
  "crates/transactions",
  "crates/watcher",
  "tools/ocr-evaluator",
  "tools/search-benchmark",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"

[workspace.dependencies]
block2 = { version = "=0.6.2", default-features = false, features = ["std"] }
clap = { version = "4.6.2", features = ["derive"] }
imagesize = { version = "=0.15.0", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
libc = { version = "=0.2.186", default-features = false }
lopdf = { version = "=0.44.0", default-features = false }
notify = { version = "=8.2.0", default-features = false }
objc2 = { version = "=0.6.4", default-features = false, features = ["std"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSObject", "NSString", "std"] }
objc2-vision = { version = "=0.3.2", default-features = false, features = ["VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler", "VNTypes", "block2", "objc2-core-foundation", "std"] }
quick-xml = { version = "=0.41.0", default-features = false }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "=0.11.0", default-features = false }
tauri = "2"
tauri-build = "2"
tempfile = "3.27.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
unicode-normalization = "0.1.25"
windows = { version = "=0.61.3", default-features = false, features = ["std", "Globalization", "Graphics_Imaging", "Media_Ocr", "Storage_Streams", "Win32_System_WinRT"] }
windows-future = { version = "=0.2.1", default-features = false }
zip = { version = "=8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[workspace.dependencies.windows-sys]
version = "0.61.2"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_Storage_Packaging_Appx",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
