[package]
name = "deskgraph-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "deskgraph"
path = "src/main.rs"

[dependencies]
clap.workspace = true
deskgraph-database = { path = "../../crates/database" }
deskgraph-domain = { path = "../../crates/domain" }
deskgraph-extractors = { path = "../../crates/extractors" }
deskgraph-projects = { path = "../../crates/projects" }
deskgraph-retrieval = { path = "../../crates/retrieval" }
deskgraph-scanner = { path = "../../crates/scanner" }
deskgraph-telemetry = { path = "../../crates/telemetry" }
deskgraph-transactions = { path = "../../crates/transactions" }
deskgraph-watcher = { path = "../../crates/watcher" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
