[package]
name = "deskgraph-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "deskgraph-mcp"
path = "src/main.rs"

[dependencies]
clap.workspace = true
deskgraph-database = { path = "../../crates/database" }
deskgraph-domain = { path = "../../crates/domain" }
deskgraph-retrieval = { path = "../../crates/retrieval" }
deskgraph-telemetry = { path = "../../crates/telemetry" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
deskgraph-extractors = { path = "../../crates/extractors" }
deskgraph-scanner = { path = "../../crates/scanner" }
tempfile.workspace = true
