[package]
name = "deskgraph-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deskgraph-domain = { path = "../domain" }
deskgraph-identity = { path = "../identity" }
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
