[package]
name = "deskgraph-extractors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deskgraph-database = { path = "../database" }
deskgraph-domain = { path = "../domain" }
deskgraph-identity = { path = "../identity" }

[dev-dependencies]
deskgraph-scanner = { path = "../scanner" }
tempfile.workspace = true
