[package]
name = "deskgraph-extractors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deskgraph-database = { path = "../database" }
deskgraph-domain = { path = "../domain" }
deskgraph-identity = { path = "../identity" }
imagesize.workspace = true
lopdf.workspace = true
quick-xml.workspace = true
zip.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block2.workspace = true
objc2.workspace = true
objc2-foundation.workspace = true
objc2-vision.workspace = true

[dev-dependencies]
deskgraph-scanner = { path = "../scanner" }
tempfile.workspace = true
