[package]
name = "deskgraph-projects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deskgraph-database = { path = "../database" }
deskgraph-domain = { path = "../domain" }

[dev-dependencies]
deskgraph-scanner = { path = "../scanner" }
serde_json.workspace = true
tempfile.workspace = true
