[package]
name = "deskgraph-transactions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deskgraph-database = { path = "../database" }
deskgraph-domain = { path = "../domain" }
deskgraph-identity = { path = "../identity" }
deskgraph-scanner = { path = "../scanner" }
serde.workspace = true
sha2.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
