[package]
name = "deskgraph-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deskgraph-database = { path = "../database" }
deskgraph-domain = { path = "../domain" }
deskgraph-identity = { path = "../identity" }
deskgraph-scanner = { path = "../scanner" }

[dev-dependencies]
tempfile.workspace = true
