[package]
name = "deskgraph-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
deskgraph-database = { path = "../database" }
deskgraph-domain = { path = "../domain" }
deskgraph-identity = { path = "../identity" }
deskgraph-scanner = { path = "../scanner" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
notify = { workspace = true, features = ["macos_fsevent"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true
