[package]
name = "deskgraph-search-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
deskgraph-database = { path = "../../crates/database" }
deskgraph-retrieval = { path = "../../crates/retrieval" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
