[package]
name = "deskgraph-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "deskgraph_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
deskgraph-database = { path = "../../../crates/database" }
deskgraph-domain = { path = "../../../crates/domain" }
deskgraph-scanner = { path = "../../../crates/scanner" }
deskgraph-telemetry = { path = "../../../crates/telemetry" }
tauri.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
