[package]
name = "deskgraph-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "deskgraph_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
deskgraph-database = { path = "../../../crates/database" }
deskgraph-domain = { path = "../../../crates/domain" }
deskgraph-extractors = { path = "../../../crates/extractors" }
deskgraph-retrieval = { path = "../../../crates/retrieval" }
deskgraph-scanner = { path = "../../../crates/scanner" }
deskgraph-telemetry = { path = "../../../crates/telemetry" }
deskgraph-transactions = { path = "../../../crates/transactions" }
deskgraph-watcher = { path = "../../../crates/watcher" }
serde.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true

[dev-dependencies]
serde_json.workspace = true
tauri = { workspace = true, features = ["test"] }
tempfile.workspace = true
